--- a/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/App_Resources/Android/src/main/AndroidManifest.xml
@@ -12,14 +12,18 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-feature android:name="android.hardware.type.watch" />
 
 	<application
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
+		android:icon="@drawable/logo"
 		android:label="@string/app_name"
-		android:theme="@style/AppTheme"
+		android:theme="@android:style/Theme.DeviceDefault"
+		android:keepScreenOn="true"
 		android:hardwareAccelerated="true">
+		<uses-library android:name="com.google.android.wearable" android:required="false" />
 
 		<activity
 			android:name="com.tns.NativeScriptActivity"
